style: Code formatting
불필요한 주석 제거, 토큰 유효기간 재설정